makko/gravity/gravity/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gravity
spec:
  serviceName: gravity
  replicas: 1
  selector:
    matchLabels:
      app: gravity
  template:
    metadata:
      labels:
        app: gravity
    spec:
      containers:
      - name: gravity
        image: ghcr.io/beryju/gravity:stable
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 67
          name: dhcp
          protocol: UDP
        - containerPort: 69
          name: tftp
          protocol: UDP
        - containerPort: 8008
          name: http
        - containerPort: 8009
          name: http-metrics
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: rook-cephfs
      resources:
        requests:
          storage: 5Gi
