makko/gravity/gravity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravity
  labels:
    app: gravity
spec:
  selector:
    app: gravity
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dnstcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dhcp
      protocol: UDP
      port: 67
      targetPort: 67
    - name: tftp
      protocol: UDP
      port: 69
      targetPort: 69
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
  type: LoadBalancer
