makko/gravity/gravity/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gravity
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "gravity.senk0.com"
  rules:
    - backendRefs:
        - name: gravity
          port: 8008
